[tool.poetry]
name = "story-augmentation-generation"
version = "0.1.0"
description = ""
authors = ["chapman73 <csiu@squareup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-cpp-python = "^0.2.27"
pydantic = "^2.5.3"
jsonref = "^1.1.0"
httpx = "^0.26.0"
sentence-transformers = "^2.2.2"
torch = "<2.1.0"
transformers = "^4.36.2"
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.11"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
